# manta-indexer

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.toml  expand_local_storage.py  indexer-design.md
.github/: dependabot.yml
.github/resources/: dolphin.json  dolphin.toml
.github/workflows/: check.yml  integration.yml  release.yml
benches/: db_bench.rs
conf/: config.toml  log.yaml
migrations/: 0_schema.sql  schema.sql
src/: cli.rs  constants.rs  db.rs  errors.rs  lib.rs  logger.rs  main.rs  monitoring.rs  pull_service.rs  relay.rs  service.rs  sync.rs  types.rs  utils.rs
src/indexer/: cache.rs  mod.rs  pull.rs  sync.rs
src/ledger_sync/: mod.rs  pull.rs  sync.rs
src/relayer/: middleware.rs  mod.rs  relay_server.rs  sub_client_pool.rs
src/relaying/: middleware.rs  mod.rs  relay_server.rs  sub_client_pool.rs
tests/: README.md  package.json  tsconfig.json
tests/integration-tests/: package.json  tsconfig.json
tests/integration-tests/precompile-coins/v0/: precomputed_reclaims_v0
tests/integration-tests/precompile-coins/v1/: initialize-utxo  precomputed_mints_v1  precomputed_reclaims_v1  precomputed_transfers_v1
tests/integration-tests/src/: check-bp.ts  config.json  initialize-assets.ts  mint-private-coins.ts  stress-test.ts  test-indexer.ts  test-rpc-relaying.ts  utils.ts
tests/src/: index.ts
