[package]
name = "manta-indexer"
version = "0.1.0"
edition = "2021"
homepage = 'https://manta.network'
license = 'GPL-3.0'
repository = 'https://github.com/Manta-Network/manta-indexer/'

[dependencies]
# error handler crates
anyhow = "1.0.65"
thiserror = "1.0.37"

# substrate crates
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.26" }

# log crates
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

# manta deps
manta-crypto = { git = "https://github.com/manta-network/manta-rs.git", tag = "v0.5.4" }
manta-pay = { git = "https://github.com/manta-network/manta-rs.git", tag = "v0.5.4", features = ["groth16", "scale", "serde"] }

# general crates
chrono = "0.4.22"
codec = { version = "3.1.5", package = "parity-scale-codec" }
futures = { version = "0.3.24", features = ["executor"] }
hex = "0.4.3"
jsonrpsee = { version = "0.15.1", features = ["full"] }
prometheus = "0.13.2"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["rt", "macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
toml = "0.5"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
tempfile = "3.3.0"

[[bench]]
name = "db_bench"
harness = false
