[package]
name = "manta-indexer"
version = "4.0.0"
edition = "2021"
rust-version = "1.58"
default-run = "manta-indexer"
homepage = "https://manta.network"
license = "GPL-3.0"
repository = "https://github.com/Manta-Network/manta-indexer/"

[dependencies]
# error handler crates
anyhow = "1.0.65"
thiserror = "1.0.37"

# substrate crates
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26" }

# log crates
log4rs = "1.2"

# manta deps
manta-crypto = { git = "https://github.com/manta-network/manta-rs.git", tag = "v0.5.9" }
manta-pay = { git = "https://github.com/manta-network/manta-rs.git", tag = "v0.5.9", features = ["groth16", "scale", "serde"] }
manta-util = { git = "https://github.com/manta-network/manta-rs.git", tag = "v0.5.9" }
pallet-manta-pay = { git = "https://github.com/manta-network/Manta.git", branch = "manta", features = ["rpc", "runtime"] }

# general crates
clap = { version = "4.0.32", features =["derive"] }
chrono = "0.4.23"
codec = { version = "3.1.5", package = "parity-scale-codec" }
crossbeam = "0.8"
dashmap = "5.4"
futures = { version = "0.3.24", features = ["executor"] }
hex = "0.4.3"
jsonrpsee = { git = "https://github.com/manta-network/jsonrpsee.git", branch = "v0151", features = ["full"] }
once_cell = "1.16"
prometheus = "0.13.2"
prometheus_exporter = { version = "0.8", features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
smallvec = "1.10.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.21", features = ["rt", "macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
toml = "0.5"
base64 = "0.20.0"
signal-hook = "0.3.14"
lru = "0.8.1"

[dev-dependencies]
criterion = "0.4.0"
manta-xt = { git = "https://github.com/Manta-Network/manta-xt.git", branch = "v4.0.0" }
rand = "0.8.5"
tempfile = "3.3.0"
simple_logger = "4.0"


[[bench]]
name = "db_bench"
harness = false

[[bin]]
name = "manta-indexer"
path = "src/main.rs"

[[bin]]
name = "load_ledger_locally"
path = "bin/load_ledger_locally.rs"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
strip = "symbols"
